# libftdi

./: CMakeLists.txt  CMakeOptions.txt
.github/workflows/: cmake.yml
cmake/: FindLIBUSB.cmake  FindLibConfuse.cmake  FindLibUSB.cmake  Findlibusb.cmake
examples/: CMakeLists.txt
examples/cmake_example/: CMakeLists.txt
ftdi_eeprom/: CMakeLists.txt
ftdipp/: CMakeLists.txt
src/: CMakeLists.txt
src/posix/: getopt.c  getopt.h  getoptlong.c  getprogname.c  gettimeofday.c  termios.h  unistd.h  usleep_win.c
src/posix/sys/: cdefs.h  fcntl.h  time.h
test/: CMakeLists.txt
