add_executable(simple simple.c)
add_executable(bitbang bitbang.c)
add_executable(bitbang2 bitbang2.c)
add_executable(bitbang_cbus bitbang_cbus.c)
add_executable(bitbang_ft2232 bitbang_ft2232.c)
add_executable(find_all find_all.c)
add_executable(serial_test serial_test.c)
add_executable(baud_test baud_test.c)
add_executable(stream_test stream_test.c)
add_executable(eeprom eeprom.c)
add_executable(async async.c)
if(NOT MINGW)
    add_executable(purge_test purge_test.c)
endif(NOT MINGW)

find_package(LibFTDI REQUIRED)

target_link_libraries(simple PRIVATE LibFTDI::ftdi1)
target_link_libraries(bitbang PRIVATE LibFTDI::ftdi1)
target_link_libraries(bitbang2 PRIVATE LibFTDI::ftdi1)
target_link_libraries(bitbang_cbus PRIVATE LibFTDI::ftdi1)
target_link_libraries(bitbang_ft2232 PRIVATE LibFTDI::ftdi1)
target_link_libraries(find_all PRIVATE LibFTDI::ftdi1)
target_link_libraries(serial_test PRIVATE LibFTDI::ftdi1)
target_link_libraries(baud_test PRIVATE LibFTDI::ftdi1)
target_link_libraries(stream_test PRIVATE LibFTDI::ftdi1)
target_link_libraries(eeprom PRIVATE LibFTDI::ftdi1)
target_link_libraries(async PRIVATE LibFTDI::ftdi1)
if(NOT MINGW)
    target_link_libraries(purge_test PRIVATE LibFTDI::ftdi1)
endif(NOT MINGW)

if( FTDIPP )
	add_executable(find_all_pp find_all_pp.cpp)
	target_link_libraries(find_all_pp PRIVATE LibFTDI::ftdipp1)
endif( FTDIPP )
